<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/lyt_botones_accion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_centerVertical="true">

            <ImageButton
                android:id="@+id/boton_reset"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/reiniciar" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:src="@drawable/basketball"/>

            <ImageButton
                android:id="@+id/boton_result"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/flecha"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/local"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_visitante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/visitante"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/text_local"
            android:layout_above="@+id/lyt_botones_accion"
            android:gravity="center">

            <Button
                android:id="@+id/boton_local_minus_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus_one"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/text_score_local"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="70sp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/boton_local_plus_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus_one"
                    android:textSize="25sp"/>

                <Button
                    android:id="@+id/boton_local_plus_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus_two"
                    android:textSize="25sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/lyt_botones_accion"
            android:layout_above="@id/text_visitante"
            android:gravity="center">

            <Button
                android:id="@+id/boton_visitante_minus_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus_one"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/text_score_visitante"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="70sp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/boton_visitante_plus_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus_one"
                    android:textSize="25sp"/>

                <Button
                    android:id="@+id/boton_visitante_plus_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus_two"
                    android:textSize="25sp"/>

            </LinearLayout>

        </LinearLayout>



    </RelativeLayout>
</layout>